@@ -1,3 +1,5 @@
+* split the code in method APFQueue.run( ) into 3 separated methods, so they could be called one by one from outside
+* starting the APFQueue threads in a separate method _start( )
 * using Queue() to serialize the condor_submit tasks
 * using self.factory.qcl instead of self.qcl in cleanlogs, so it always keeps the latest configuration, even after reconfig
 * Factory.__init__ refactorized, for clarity
